--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -6,6 +6,10 @@ jobs:
   pool:
     vmImage: ubuntu-latest
   displayName: Run JMeter tests
+  environment:
+      name:   'My Env'
+      resourceType: VirtualMachine
+      tags: app
   steps:
   - task: Bash@3
     displayName: Execute JMeter tests
